@@ -5,7 +5,6 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.http.MediaType;
-import org.springframework.mock.web.MockHttpSession;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
@@ -48,251 +46,254 @@ import es.udc.fic.corpuslab.modules.researchgroup.repositories.ResearchGroupRepo
 @ActiveProfiles("test")
 class ProjectAssignParticipantsIntegrationTest extends AbstractIntegrationTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+        @Autowired
+        private MockMvc mockMvc;
 
-    @Autowired
-    private UserRepository userRepository;
+        @Autowired
+        private UserRepository userRepository;
 
-    @Autowired
-    private ResearchGroupRepository researchGroupRepository;
+        @Autowired
+        private ResearchGroupRepository researchGroupRepository;
 
-    @Autowired
-    private ResearchGroupMemberRepository memberRepository;
+        @Autowired
+        private ResearchGroupMemberRepository memberRepository;
 
-    @Autowired
-    private ResearchGroupInvitationRepository invitationRepository;
+        @Autowired
+        private ResearchGroupInvitationRepository invitationRepository;
 
-    @Autowired
-    private NotificationRepository notificationRepository;
+        @Autowired
+        private NotificationRepository notificationRepository;
 
-    @Autowired
-    private ProjectRepository projectRepository;
+        @Autowired
+        private ProjectRepository projectRepository;
 
-    @Autowired
-    private ProjectParticipantRepository projectParticipantRepository;
+        @Autowired
+        private ProjectParticipantRepository projectParticipantRepository;
 
-    @Autowired
-    private DatasetItemRepository datasetItemRepository;
+        @Autowired
+        private DatasetItemRepository datasetItemRepository;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
+        @Autowired
+        private PasswordEncoder passwordEncoder;
 
-    private final ObjectMapper objectMapper = JsonMapper.builder().findAndAddModules().build();
+        private final ObjectMapper objectMapper = JsonMapper.builder().findAndAddModules().build();
 
-    @BeforeEach
-    void cleanData() {
-        notificationRepository.deleteAll();
-        invitationRepository.deleteAll();
-        memberRepository.deleteAll();
-        datasetItemRepository.deleteAll();
-        projectParticipantRepository.deleteAll();
-        projectRepository.deleteAll();
-        researchGroupRepository.deleteAll();
-        userRepository.deleteAll();
-    }
+        @BeforeEach
+        void cleanData() {
+                notificationRepository.deleteAll();
+                invitationRepository.deleteAll();
+                memberRepository.deleteAll();
+                datasetItemRepository.deleteAll();
+                projectParticipantRepository.deleteAll();
+                projectRepository.deleteAll();
+                researchGroupRepository.deleteAll();
+                userRepository.deleteAll();
+        }
 
-    private User createUser(String email) {
-        User user = UserTestBuilder.validUser()
-                .withEmail(email)
-                .withPasswordHash(passwordEncoder.encode("strong-password"))
-                .build();
-        return userRepository.save(user);
-    }
+        private User createUser(String email) {
+                User user = UserTestBuilder.validUser()
+                                .withEmail(email)
+                                .withPasswordHash(passwordEncoder.encode("strong-password"))
+                                .build();
+                return userRepository.save(user);
+        }
 
-    private MockHttpSession loginAs(String email) throws Exception {
-        MvcResult result = mockMvc.perform(post("/api/auth/login")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(
-                        UserLoginRequestTestBuilder.validRequest().withEmail(email).build())))
-                .andExpect(status().isOk())
-                .andReturn();
+        private String loginAs(String email) throws Exception {
+                MvcResult result = mockMvc.perform(post("/api/auth/login")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(
+                                                UserLoginRequestTestBuilder.validRequest().withEmail(email).build())))
+                                .andExpect(status().isOk())
+                                .andReturn();
 
-        return (MockHttpSession) result.getRequest().getSession(false);
-    }
+                return objectMapper.readTree(result.getResponse().getContentAsString()).get("token").asText();
+        }
 
-    private ResearchGroup createGroup(String name) {
-        return researchGroupRepository.save(ResearchGroupTestBuilder.validGroup().withName(name).build());
-    }
+        private ResearchGroup createGroup(String name) {
+                return researchGroupRepository.save(ResearchGroupTestBuilder.validGroup().withName(name).build());
+        }
 
-    private void addMembership(User user, ResearchGroup group, ResearchGroupMemberRole role) {
-        memberRepository.save(ResearchGroupMemberTestBuilder.validMember()
-                .withUser(user)
-                .withResearchGroup(group)
-                .withRole(role)
-                .build());
-    }
+        private void addMembership(User user, ResearchGroup group, ResearchGroupMemberRole role) {
+                memberRepository.save(ResearchGroupMemberTestBuilder.validMember()
+                                .withUser(user)
+                                .withResearchGroup(group)
+                                .withRole(role)
+                                .build());
+        }
 
-    private Project createProject(ResearchGroup group, String name) {
-        Project project = new Project();
-        project.setResearchGroup(group);
-        project.setName(name);
-        return projectRepository.save(project);
-    }
+        private Project createProject(ResearchGroup group, String name) {
+                Project project = new Project();
+                project.setResearchGroup(group);
+                project.setName(name);
+                return projectRepository.save(project);
+        }
 
-    private void assign(Project project, User user, ProjectParticipantRole role) {
-        ProjectParticipant participant = new ProjectParticipant();
-        participant.setProject(project);
-        participant.setUser(user);
-        participant.setRole(role);
-        projectParticipantRepository.save(participant);
-    }
+        private void assign(Project project, User user, ProjectParticipantRole role) {
+                ProjectParticipant participant = new ProjectParticipant();
+                participant.setProject(project);
+                participant.setUser(user);
+                participant.setRole(role);
+                projectParticipantRepository.save(participant);
+        }
 
-    @Test
-    void shouldAssignAndReplaceProjectParticipantsWhenRequesterIsOwner() throws Exception {
-        User owner = createUser("owner.assign@example.com");
-        User oldParticipant = createUser("old.assign@example.com");
-        User newParticipantA = createUser("newa.assign@example.com");
-        User newParticipantB = createUser("newb.assign@example.com");
+        @Test
+        void shouldAssignAndReplaceProjectParticipantsWhenRequesterIsOwner() throws Exception {
+                User owner = createUser("owner.assign@example.com");
+                User oldParticipant = createUser("old.assign@example.com");
+                User newParticipantA = createUser("newa.assign@example.com");
+                User newParticipantB = createUser("newb.assign@example.com");
 
-        ResearchGroup group = createGroup("Assignment Group");
-        addMembership(owner, group, ResearchGroupMemberRole.OWNER);
-        addMembership(oldParticipant, group, ResearchGroupMemberRole.ANNOTATOR);
-        addMembership(newParticipantA, group, ResearchGroupMemberRole.ANNOTATOR);
-        addMembership(newParticipantB, group, ResearchGroupMemberRole.ANNOTATOR);
+                ResearchGroup group = createGroup("Assignment Group");
+                addMembership(owner, group, ResearchGroupMemberRole.OWNER);
+                addMembership(oldParticipant, group, ResearchGroupMemberRole.ANNOTATOR);
+                addMembership(newParticipantA, group, ResearchGroupMemberRole.ANNOTATOR);
+                addMembership(newParticipantB, group, ResearchGroupMemberRole.ANNOTATOR);
 
-        Project project = createProject(group, "Assignment Project");
-        assign(project, owner, ProjectParticipantRole.CREATOR);
-        assign(project, oldParticipant, ProjectParticipantRole.PARTICIPANT);
+                Project project = createProject(group, "Assignment Project");
+                assign(project, owner, ProjectParticipantRole.CREATOR);
+                assign(project, oldParticipant, ProjectParticipantRole.PARTICIPANT);
 
-        MockHttpSession session = loginAs("owner.assign@example.com");
+                String session = loginAs("owner.assign@example.com");
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(List.of(
-                owner.getId(),
-                newParticipantA.getId(),
-                newParticipantB.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(List.of(
+                                owner.getId(),
+                                newParticipantA.getId(),
+                                newParticipantB.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                project.getId())
-                .session(session)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isNoContent());
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                project.getId())
+                                .header("Authorization", "Bearer " + session)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isNoContent());
 
-        List<ProjectParticipant> projectParticipants = projectParticipantRepository.findAll().stream()
-                .filter(pp -> pp.getProject().getId().equals(project.getId()))
-                .collect(Collectors.toList());
+                List<ProjectParticipant> projectParticipants = projectParticipantRepository.findAll().stream()
+                                .filter(pp -> pp.getProject().getId().equals(project.getId()))
+                                .toList();
 
-        List<Long> participantUserIds = projectParticipants.stream()
-                .filter(pp -> pp.getRole() == ProjectParticipantRole.PARTICIPANT)
-                .map(pp -> pp.getUser().getId())
-                .collect(Collectors.toList());
+                List<Long> participantUserIds = projectParticipants.stream()
+                                .filter(pp -> pp.getRole() == ProjectParticipantRole.PARTICIPANT)
+                                .map(pp -> pp.getUser().getId())
+                                .toList();
 
-        assertThat(participantUserIds)
-                .containsExactlyInAnyOrder(newParticipantA.getId(), newParticipantB.getId())
-                .doesNotContain(owner.getId(), oldParticipant.getId());
+                assertThat(participantUserIds)
+                                .containsExactlyInAnyOrder(newParticipantA.getId(), newParticipantB.getId())
+                                .doesNotContain(owner.getId(), oldParticipant.getId());
 
-        assertThat(projectParticipants.stream().filter(pp -> pp.getRole() == ProjectParticipantRole.CREATOR).count())
-                .isEqualTo(1L);
-    }
+                assertThat(projectParticipants.stream().filter(pp -> pp.getRole() == ProjectParticipantRole.CREATOR)
+                                .count())
+                                .isEqualTo(1L);
+        }
 
-    @Test
-    void shouldAllowRequesterAdminToAssignParticipants() throws Exception {
-        User admin = createUser("admin.assign@example.com");
-        User participant = createUser("participant.assign@example.com");
+        @Test
+        void shouldAllowRequesterAdminToAssignParticipants() throws Exception {
+                User admin = createUser("admin.assign@example.com");
+                User participant = createUser("participant.assign@example.com");
 
-        ResearchGroup group = createGroup("Admin Assignment Group");
-        addMembership(admin, group, ResearchGroupMemberRole.ADMIN);
-        addMembership(participant, group, ResearchGroupMemberRole.ANNOTATOR);
+                ResearchGroup group = createGroup("Admin Assignment Group");
+                addMembership(admin, group, ResearchGroupMemberRole.ADMIN);
+                addMembership(participant, group, ResearchGroupMemberRole.ANNOTATOR);
 
-        Project project = createProject(group, "Admin Assignment Project");
-        assign(project, admin, ProjectParticipantRole.CREATOR);
+                Project project = createProject(group, "Admin Assignment Project");
+                assign(project, admin, ProjectParticipantRole.CREATOR);
 
-        MockHttpSession session = loginAs("admin.assign@example.com");
+                String session = loginAs("admin.assign@example.com");
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
-                List.of(participant.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
+                                List.of(participant.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                project.getId())
-                .session(session)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isNoContent());
-    }
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                project.getId())
+                                .header("Authorization", "Bearer " + session)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isNoContent());
+        }
 
-    @Test
-    void shouldReturnForbiddenWhenRequesterRoleCannotAssignParticipants() throws Exception {
-        User annotator = createUser("annotator.assign@example.com");
-        User participant = createUser("participant2.assign@example.com");
+        @Test
+        void shouldReturnForbiddenWhenRequesterRoleCannotAssignParticipants() throws Exception {
+                User annotator = createUser("annotator.assign@example.com");
+                User participant = createUser("participant2.assign@example.com");
 
-        ResearchGroup group = createGroup("Forbidden Assignment Group");
-        addMembership(annotator, group, ResearchGroupMemberRole.ANNOTATOR);
-        addMembership(participant, group, ResearchGroupMemberRole.ANNOTATOR);
+                ResearchGroup group = createGroup("Forbidden Assignment Group");
+                addMembership(annotator, group, ResearchGroupMemberRole.ANNOTATOR);
+                addMembership(participant, group, ResearchGroupMemberRole.ANNOTATOR);
 
-        Project project = createProject(group, "Forbidden Assignment Project");
-        assign(project, annotator, ProjectParticipantRole.CREATOR);
+                Project project = createProject(group, "Forbidden Assignment Project");
+                assign(project, annotator, ProjectParticipantRole.CREATOR);
 
-        MockHttpSession session = loginAs("annotator.assign@example.com");
+                String session = loginAs("annotator.assign@example.com");
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
-                List.of(participant.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
+                                List.of(participant.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                project.getId())
-                .session(session)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isForbidden());
-    }
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                project.getId())
+                                .header("Authorization", "Bearer " + session)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isForbidden());
+        }
 
-    @Test
-    void shouldReturnBadRequestWhenParticipantIsNotActiveGroupMember() throws Exception {
-        User owner = createUser("owner.badrequest@example.com");
-        User outsider = createUser("outsider.badrequest@example.com");
+        @Test
+        void shouldReturnBadRequestWhenParticipantIsNotActiveGroupMember() throws Exception {
+                User owner = createUser("owner.badrequest@example.com");
+                User outsider = createUser("outsider.badrequest@example.com");
 
-        ResearchGroup group = createGroup("Bad Request Group");
-        addMembership(owner, group, ResearchGroupMemberRole.OWNER);
+                ResearchGroup group = createGroup("Bad Request Group");
+                addMembership(owner, group, ResearchGroupMemberRole.OWNER);
 
-        Project project = createProject(group, "Bad Request Project");
-        assign(project, owner, ProjectParticipantRole.CREATOR);
+                Project project = createProject(group, "Bad Request Project");
+                assign(project, owner, ProjectParticipantRole.CREATOR);
 
-        MockHttpSession session = loginAs("owner.badrequest@example.com");
+                String session = loginAs("owner.badrequest@example.com");
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
-                List.of(outsider.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
+                                List.of(outsider.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                project.getId())
-                .session(session)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest());
-    }
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                project.getId())
+                                .header("Authorization", "Bearer " + session)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isBadRequest());
+        }
 
-    @Test
-    void shouldReturnForbiddenWhenRequesterIsNotAuthenticated() throws Exception {
-        User owner = createUser("owner.noauth@example.com");
-        ResearchGroup group = createGroup("No Auth Group");
-        addMembership(owner, group, ResearchGroupMemberRole.OWNER);
+        @Test
+        void shouldReturnForbiddenWhenRequesterIsNotAuthenticated() throws Exception {
+                User owner = createUser("owner.noauth@example.com");
+                ResearchGroup group = createGroup("No Auth Group");
+                addMembership(owner, group, ResearchGroupMemberRole.OWNER);
 
-        Project project = createProject(group, "No Auth Project");
-        assign(project, owner, ProjectParticipantRole.CREATOR);
+                Project project = createProject(group, "No Auth Project");
+                assign(project, owner, ProjectParticipantRole.CREATOR);
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(List.of(owner.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
+                                List.of(owner.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                project.getId())
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isForbidden());
-    }
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                project.getId())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isForbidden());
+        }
 
-    @Test
-    void shouldReturnNotFoundWhenProjectDoesNotExist() throws Exception {
-        User owner = createUser("owner.notfound@example.com");
-        ResearchGroup group = createGroup("Not Found Group");
-        addMembership(owner, group, ResearchGroupMemberRole.OWNER);
+        @Test
+        void shouldReturnNotFoundWhenProjectDoesNotExist() throws Exception {
+                User owner = createUser("owner.notfound@example.com");
+                ResearchGroup group = createGroup("Not Found Group");
+                addMembership(owner, group, ResearchGroupMemberRole.OWNER);
 
-        MockHttpSession session = loginAs("owner.notfound@example.com");
+                String session = loginAs("owner.notfound@example.com");
 
-        AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(List.of(owner.getId()));
+                AssignProjectParticipantsRequestDto request = new AssignProjectParticipantsRequestDto(
+                                List.of(owner.getId()));
 
-        mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
-                99999L)
-                .session(session)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isNotFound());
-    }
+                mockMvc.perform(post("/api/research-groups/{groupId}/projects/{projectId}/participants", group.getId(),
+                                99999L)
+                                .header("Authorization", "Bearer " + session)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isNotFound());
+        }
 }
